--- a/scss/blocs/main/sections/_faq-section.scss
+++ b/scss/blocs/main/sections/_faq-section.scss
@@ -18,7 +18,7 @@ summary {
 
 summary::before {
   position: absolute;
-  content: url("./../../../img/icons/faq-toggle.svg");
+  content: url("./../img/icons/faq-toggle.svg");
   left: 0;
   top: 3px;
   transition: transform 0.2s ease;
