--- a/scss/blocs/main/sections/_interview-section.scss
+++ b/scss/blocs/main/sections/_interview-section.scss
@@ -83,7 +83,7 @@
 .interview-section__input:valid {
   outline: 2px solid $light-green;
   border: 1px solid transparent;
-  background-image: url("./../../img/icons/form-valid.svg");
+  background-image: url("./../img/icons/form-valid.svg");
   background-repeat: no-repeat;
   background-position: right 20px center;
 }
@@ -92,7 +92,7 @@
   outline: 2px solid $error;
   border: 1px solid transparent;
   position: relative;
-  background-image: url("./../../img/icons/form-invalid.svg");
+  background-image: url("./../img/icons/form-invalid.svg");
   background-repeat: no-repeat;
   background-position: right 20px center;
 }
