--- a/css/main.css
+++ b/css/main.css
@@ -320,7 +320,7 @@ body {
 }
 .welcome-section {
   padding: 31px 0 35px;
-  background: url(./../../../img/welcome-img.jpg) rgba(0, 47, 61, 0.6);
+  background: url("./../img/welcome-img.jpg") rgba(0, 47, 61, 0.6);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -355,7 +355,7 @@ body {
 @media (min-width: 768px) {
   .welcome-section {
     padding: 63px 0 114px;
-    background: url(./../../../img/welcome-img-desktop.jpg) rgba(0, 47, 61, 0.6);
+    background: url("./../img/welcome-img-desktop.jpg") rgba(0, 47, 61, 0.6);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -520,7 +520,7 @@ body {
 
 .development-section__video-wrapper::before {
   position: absolute;
-  content: url("./../../../img/btn-play.png");
+  content: url("./../img/btn-play.png");
   top: calc(50% - 29px);
   left: calc(50% - 29px);
 }
@@ -549,14 +549,14 @@ body {
     margin-bottom: 43px;
   }
   .development-section__video-wrapper::before {
-    content: url("./../../../img/btn-play-desktop.png");
+    content: url("./../img/btn-play-desktop.png");
     top: calc(50% - 45px);
     left: calc(50% - 45px);
   }
 }
 .practice-section {
   padding: 34px 0 29px;
-  background: url("./../../../img/get-practice.jpg") rgba(0, 47, 61, 0.6);
+  background: url("./../img/get-practice.jpg") rgba(0, 47, 61, 0.6);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -577,7 +577,7 @@ body {
 @media (min-width: 1280px) {
   .practice-section {
     padding: 83px 0 141px;
-    background: url("./../../../img/get-practice-desktop.jpg") rgba(0, 47, 61, 0.6);
+    background: url("./../img/get-practice-desktop.jpg") rgba(0, 47, 61, 0.6);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -764,7 +764,7 @@ details p {
 .interview-section__input:valid {
   outline: 2px solid rgb(155, 204, 55);
   border: 1px solid transparent;
-  background-image: url("./../../img/icons/form-valid.svg");
+  background-image: url("./../img/icons/form-valid.svg");
   background-repeat: no-repeat;
   background-position: right 20px center;
 }
@@ -773,7 +773,7 @@ details p {
   outline: 2px solid rgb(253, 117, 131);
   border: 1px solid transparent;
   position: relative;
-  background-image: url("./../../img/icons/form-invalid.svg");
+  background-image: url("./../img/icons/form-invalid.svg");
   background-repeat: no-repeat;
   background-position: right 20px center;
 }
@@ -782,7 +782,7 @@ details p {
   outline: 2px solid rgb(253, 117, 131);
   border: 1px solid transparent;
   position: relative;
-  background-image: url("./../../img/icons/form-invalid.svg");
+  background-image: url("./../img/icons/form-invalid.svg");
   background-repeat: no-repeat;
   background-position: right 20px center;
 }
