--- a/scss/blocs/main/sections/_interview-section.scss
+++ b/scss/blocs/main/sections/_interview-section.scss
@@ -1,6 +1,6 @@
 .interview-section {
   padding: 18px 0;
-  background: url("./../../../img/intervew-mobile.jpg") $shade;
+  background: url("./../img/intervew-mobile.jpg") $shade;
   mix-blend-mode: multiply;
   @include section-background;
 }
